--- a/studentUpdate.html
+++ b/studentUpdate.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>studentUpdate</title>
+    <title>Target Update</title>
     <link rel="stylesheet" href="Style.css">
     <style>
         body {
@@ -19,42 +19,35 @@
 </head>
 
 <body>
-    <form id="studentUpdate" method="post">
-        <h1>Update Student</h1>
-
-        <div>
-            <label for="studentUpdateID">ID:</label>
-            <input type="text" id="studentUpdateID" name="studentUpdateID" placeholder="Enter the ID" required>
+    <form id="updateForm" method="post">
+        <h1 id="updateTitle">Update</h1>
+        <input type="hidden" id="targetUpdateID" name="targetUpdateID">
+        <div class="updateFirstName">
+            <label for="targetUpdateFirstName">First Name:</label>
+            <input type="text" id="targetUpdateFirstName" name="targetUpdateFirstName"
+                placeholder="Enter the first name" required>
         </div>
 
-        <div>
-            <label for="studentUpdateFirstName">First Name:</label>
-            <input type="text" id="studentUpdateFirstName" name="studentUpdateFirstName"
-                placeholder="Enter your first name" required>
-        </div>
-
-        <div>
-            <label for="studentUpdateLastName">Last Name:</label>
-            <input type="text" id="studentUpdateLastName" name="studentUpdateLastName"
-                placeholder="Enter your last name" required>
-        </div>
-
-        <div>
-            <label for="studentUpdateEmail">Email:</label>
-            <input type="email" id="studentUpdateEmail" name="studentUpdateEmail" placeholder="Enter your email"
+        <div class="updateLastName">
+            <label for="targetUpdateLastName">Last Name:</label>
+            <input type="text" id="targetUpdateLastName" name="targetUpdateLastName" placeholder="Enter your last name"
                 required>
         </div>
 
-        <div>
-            <label for="studentUpdateDateOfBirth">Date of Birth</label>
-            <input type="date" id="studentUpdateDateOfBirth" name="studentUpdateDateOfBirth"
+        <div class="updateEmail">
+            <label for="targetUpdateEmail">Email:</label>
+            <input type="email" id="targetUpdateEmail" name="targetUpdateEmail" placeholder="Enter your email" required>
+        </div>
+
+        <div class="updateDateOfBirth">
+            <label for="targetUpdateDateOfBirth">Date of Birth</label>
+            <input type="date" id="targetUpdateDateOfBirth" name="targetUpdateDateOfBirth"
                 placeholder="Enter your date of birth" required>
         </div>
 
-        <div>
-            <label for="studentUpdateGrade">Grade</label>
-            <input type="number" id="studentUpdateGrade" name="studentUpdateGrade" placeholder="Enter the grade"
-                required>
+        <div class="updateType">
+            <label for="targetUpdateType" id="updateTypeLabel">Type</label>
+            <input type="text" id="targetUpdateType" name="targetUpdateType" placeholder="Enter the type" required>
         </div>
 
 
@@ -63,11 +56,11 @@
 
         <a href="dashboard.html">Home</a>
 
-        <div id="messageStudentUpdate"></div>
+        <div id="messageUpdate"></div>
         <br>
     </form>
     <script src="index.js"></script>
-    <script src="dashboard.js"></script>
+    <script src="Update.js"></script>
 </body>
 
 </html>
